--- a/ServletsAndJsp/src/main/webapp/index.html
+++ b/ServletsAndJsp/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-	<form action="add" >
+	<form action="add" method="get">
 	Enter First Number : <input type="text" name="num1"><br>
 	Enter second Number: <input type="text" name="num2"><br>
 	<input type="submit"></form>
